[package]
name = "nginx-config"
description = """
    A parser, AST and formatter for nginx configuration files.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nginx", "config", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/tailhook/nginx-config"
documentation = "https://docs.rs/nginx-config"
version = "0.13.2"
authors = ["paul@colomiets.name"]

[dependencies]
combine = "3.5.1"
failure = "0.1.1"
matches = "0.1.6"
strsim = { version="0.7.0", optional=true }

[features]
default = ["fuzzy_errors"]
fuzzy_errors = ["strsim"]

[dev-dependencies]
pretty_assertions = "0.5.1"
regex = "1.0.0"
